<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/end_root"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/cat_transition_shared_axis_courses_title"
      android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center_horizontal"
      android:gravity="center"
      android:text="@string/cat_transition_shared_axis_courses_caption"
      android:textAppearance="?attr/textAppearanceCaption" />

    <io.material.catalog.transition.SwitchRowView
      style="@style/Widget.Catalog.CategorySwitchRowView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:title="@string/cat_transition_shared_axis_courses_one" />

    <io.material.catalog.transition.SwitchRowView
      style="@style/Widget.Catalog.CategorySwitchRowView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:title="@string/cat_transition_shared_axis_courses_two" />

    <io.material.catalog.transition.SwitchRowView
      style="@style/Widget.Catalog.CategorySwitchRowView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:title="@string/cat_transition_shared_axis_courses_three" />

    <io.material.catalog.transition.SwitchRowView
      style="@style/Widget.Catalog.CategorySwitchRowView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:title="@string/cat_transition_shared_axis_courses_four" />

    <io.material.catalog.transition.SwitchRowView
      style="@style/Widget.Catalog.CategorySwitchRowView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:title="@string/cat_transition_shared_axis_courses_five" />
  </LinearLayout>
</ScrollView>
