<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

  <ImageView
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="48dp"
      android:alpha="@dimen/material_emphasis_medium"
      android:tint="?attr/colorOnSurface"
      android:contentDescription="@string/cat_transition_image_content_desc"
      app:srcCompat="@drawable/ic_account_circle_24dp" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      android:text="@string/cat_transition_shared_axis_sign_in_greeting"
      android:textAppearance="?attr/textAppearanceHeadline5" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      android:text="@string/cat_transition_shared_axis_sign_in_title"
      android:textAppearance="?attr/textAppearanceCaption" />

  <com.google.android.material.textfield.TextInputLayout
      style="?attr/textInputSignInStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:hint="@string/cat_transition_shared_axis_sign_in_hint"
      app:endIconMode="password_toggle">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      style="?attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/cat_transition_shared_axis_sign_in_forgot_email" />

  <Button
      style="?attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_transition_shared_axis_sign_in_create_account" />
</LinearLayout>
