<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:clipToPadding="false"
      android:clipChildren="false"
      android:orientation="vertical">

    <LinearLayout
        android:id="@+id/configuration_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_path_motion_title"/>

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:id="@+id/path_motion_button_group"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:selectionRequired="true"
          app:singleSelection="true">

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/linear_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_transition_config_path_motion_linear"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/arc_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_transition_config_path_motion_arc"/>

      </com.google.android.material.button.MaterialButtonToggleGroup>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/colorControlHighlight"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_enter_duration_title"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:clipChildren="false"
          android:clipToPadding="false">

        <com.google.android.material.slider.Slider
            android:id="@+id/enter_duration_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:valueFrom="0"
            android:valueTo="10000"
            android:stepSize="25"
            android:value="300" />

        <TextView
            android:id="@+id/enter_duration_value"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            tools:text="300"/>

      </LinearLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_return_duration_title"
          android:layout_marginTop="4dp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:clipChildren="false"
          android:clipToPadding="false">

        <com.google.android.material.slider.Slider
            android:id="@+id/return_duration_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:valueFrom="0"
            android:valueTo="10000"
            android:stepSize="25"
            android:value="275" />

        <TextView
            android:id="@+id/return_duration_value"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            tools:text="275"/>

      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/colorControlHighlight"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="4dp"
          android:text="@string/cat_transition_config_interpolation_title"/>

      <RadioGroup
          android:id="@+id/interpolation_radio_group"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_fast_out_slow_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_transition_config_fast_out_slow_in_title"
            android:checked="true"/>

        <RadioButton
          android:id="@+id/radio_overshoot"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_overshoot" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/overshoot_tension_text_input_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="36dp"
          android:layout_marginEnd="4dp"
          android:hint="@string/cat_transition_config_overshoot_tension_hint">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/overshoot_tension_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioButton
          android:id="@+id/radio_anticipate_overshoot"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_anticipate_overshoot" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/anticipate_overshoot_tension_text_input_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="36dp"
          android:layout_marginEnd="4dp"
          android:hint="@string/cat_transition_config_overshoot_tension_hint">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/anticipate_overshoot_tension_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioButton
          android:id="@+id/radio_bounce"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_bounce" />

        <RadioButton
            android:id="@+id/radio_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_transition_config_custom_interpolator_title"/>

        <LinearLayout
          android:id="@+id/custom_curve_container"
          android:layout_width="match_parent"
          android:layout_height="64dp"
          android:layout_marginStart="32dp"
          android:layout_marginLeft="32dp"
          android:weightSum="4"
          android:baselineAligned="false"
          android:orientation="horizontal">

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/x1_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/cat_transition_config_cubic_bezier_control_x1_hint">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/x1_edit_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionNext"
              android:inputType="numberDecimal"/>
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/y1_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/cat_transition_config_cubic_bezier_control_y1_hint">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/y1_edit_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionNext"
              android:inputType="numberDecimal"/>
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/x2_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/cat_transition_config_cubic_bezier_control_x2_hint">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/x2_edit_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionNext"
              android:inputType="numberDecimal"/>
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/y2_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/cat_transition_config_cubic_bezier_control_y2_hint">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/y2_edit_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionDone"
              android:inputType="numberDecimal"/>
          </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
      </RadioGroup>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/colorControlHighlight"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_fade_mode_title"/>

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:id="@+id/fade_mode_button_group"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          app:selectionRequired="true"
          app:singleSelection="true">

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/fade_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/cat_transition_config_fade_mode_in"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/fade_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/cat_transition_config_fade_mode_out"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/fade_cross_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/cat_transition_config_fade_mode_cross"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/fade_through_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/cat_transition_config_fade_mode_through"/>

      </com.google.android.material.button.MaterialButtonToggleGroup>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/colorControlHighlight"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_transition_config_debug_title"/>

      <CheckBox
          android:id="@+id/draw_debug_checkbox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/cat_transition_config_draw_debug_checkbox_desc" />

    </LinearLayout>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cat_transition_config_apply_button_text"/>

    <Button
        android:id="@+id/clear_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat_transition_config_clear_button_text"/>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>
