<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/action_albums"
      android:icon="@drawable/ic_photo_library_24px"
      android:title="@string/cat_transition_fade_through_menu_item_albums"/>
  <item
      android:id="@+id/action_photos"
      android:icon="@drawable/ic_photo_24px"
      android:title="@string/cat_transition_fade_through_menu_item_photos"/>
  <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_search_24px"
      android:title="@string/cat_transition_fade_through_menu_item_search"/>
</menu>
